--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Aums</title>
+  <title>Grad Management</title>
 
   <link href="../../styles/OpenNew.css" rel="stylesheet">
   <link href="//cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
@@ -11,7 +11,7 @@
 
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
