--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Grad Management</title>
 
-  <link href="../../styles/OpenNew.css" rel="stylesheet">
+  <!-- <link href="../../styles/OpenNew.css" rel="stylesheet"> -->
   <link href="//cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
 
 
